[gd_scene load_steps=2 format=3 uid="uid://cy7fkrt7r1ivc"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_3sf4d"]

[node name="Enemy" type="Area3D"]
collision_layer = 17
collision_mask = 2
script = ExtResource("1_3sf4d")

[node name="Sprite3D" type="Sprite3D" parent="."]
pixel_size = 0.1
billboard = 2
shaded = true
texture_filter = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
